--- a/systemd/iot-pc-gather.service
+++ b/systemd/iot-pc-gather.service
@@ -2,6 +2,6 @@
 Description=IOT PC data gather
 
 [Service]
-Type=forking
+Type=simple
 WorkingDirectory=/opt/home-temp-server/pc-info-server
-ExecStart=python3 pcserver.py '../weather-server/data/pc-data-TIME.csv' &
+ExecStart=python3 pcserver.py '../weather-server/data/pc-data-TIME.csv'
