--- a/systemd/iot-pc-gather.service
+++ b/systemd/iot-pc-gather.service
@@ -5,3 +5,6 @@ Description=IOT PC data gather
 Type=simple
 WorkingDirectory=/opt/home-temp-server/pc-info-server
 ExecStart=python3 pcserver.py '../weather-server/data/pc-data-TIME.csv'
+
+[Install]
+WantedBy=multi-user.target
