--- a/systemd/iot-pc-gather.service
+++ b/systemd/iot-pc-gather.service
@@ -4,7 +4,7 @@ Description=IOT PC data gather
 [Service]
 Type=simple
 WorkingDirectory=/opt/home-temp-server/pc-info-server
-ExecStart=python3 pcserver.py '../weather-server/data/pc-data-TIME.csv'
+ExecStart=python3 pcserver.py
 
 [Install]
 WantedBy=multi-user.target
